--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   </head>
   <body>
     <header class="main-header">
-      <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-tea-cozy-logo.png" alt="Tea Cozy logo">
+      <img
+        class="logo"
+        src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-tea-cozy-logo.png"
+        alt="Tea Cozy logo">
       <ul class="main-nav">
         <li><a href="#mission">Mission</a></li>
         <li><a href="#featured-tea">Featured Tea</a></li>
