--- a/index.html
+++ b/index.html
@@ -17,9 +17,15 @@
         <li><a href="#locations">Locations</a></li>
       </ul>
     </header>
-
-
-
+    <section class="mission">
+      <img
+        src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-mission-background.jpg"
+        alt="tea pic">
+      <h2 class="mission">Our Mission</h2>
+      <h4>
+        Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea
+      </h4>
+    </section>
 
   </body>
 </html>
