--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="/Users/dariaaverina/Documents/GitHub/TeaCozy/resources/style.css" type="text/css">
+    <link
+      rel="stylesheet"
+      href="/Users/dariaaverina/Documents/GitHub/TeaCozy/resources/style.css"
+      type="text/css">
     <title>Tea Cozy</title>
   </head>
   <body>
+
     <header class="main-header">
       <img
         class="logo"
@@ -17,15 +21,58 @@
         <li><a href="#locations">Locations</a></li>
       </ul>
     </header>
+
     <section class="mission">
       <div class="mission-items">
         <h2>Our Mission</h2>
         <h4>
-        Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea
+          Handpicked, Artisanally Curated,
+          Free Range, Sustainable, Small Batch,
+          Fair Trade, Organic Tea
         </h4>
       </div>
     </section>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+    <section class="tea-month-header">
+      <div class="header">
+        <h2>Tea of the Month</h2>
+        <h4>What's Steeping at The Tea Cozy?</h4>
+      </div>
+      <section class="container">
+        <div class="item">
+          <img
+            src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-berryblitz.jpg"
+            alt="Fall Berry Blitz Tea photo">
+            <span>Fall Berry Blitz Tea</span>
+        </div>
+        <div class="item">
+          <img
+            src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-spiced-rum.jpg"
+            alt="Spiced Rum Tea photo">
+            <span>Spiced Rum Tea</span>
+        </div>
+        <div class="item">
+          <img
+            src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-donut.jpg"
+            alt="donut photo">
+            <span>Seasonal Donuts</span>
+        </div>
+        <div class="item">
+          <img
+            src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myrtle-ave.jpg"
+            alt="Myrtle Ave Tea photo">
+            <span>Myrtle Ave Tea</span>
+        </div>
+        <div class="item">
+          <img
+            src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-bedford-bizarre.jpg"
+            alt="Bedford Bizarre Tea photo">
+            <span>Bedford Bizarre Tea</span>
+        </div>
+     </section>
+    </section>
+
+
 
   </body>
 </html>
