location section style

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </ul>
     </header>
 
-    <section class="mission">
+    <section id="mission">
       <div class="mission-items">
         <h2>Our Mission</h2>
         <h4>
@@ -33,7 +33,7 @@
       </div>
     </section>
 
-    <section class="tea-month-header">
+    <section id="featured-tea">
       <div class="header">
         <h2>Tea of the Month</h2>
         <h4>What's Steeping at The Tea Cozy?</h4>
@@ -70,6 +70,35 @@
             <span>Bedford Bizarre Tea</span>
         </div>
      </section>
+    </section>
+
+    <section id="locations">
+      <h2>Locations</h2>
+      <section class="container">
+        <div class="location">
+          <h3>Downtown</h3>
+          <p>
+            384 West 4th St <br>
+            Suite 108 <br>
+            Portland, Maine
+         </p>
+       </div>
+       <div class="location">
+         <h3>East Bayside</h3>
+           <p>
+             3433 Phisherman's Avenue <br>
+             (Northwest Corner) <br>
+             Portland, Maine
+           </p>
+       </div>
+       <div class="location">
+         <h3>Oakdale</h3>
+         <p>
+           515 Crescent Avenue <br>
+           Second Floor <br>
+           Portland, Maine
+         </p>
+       </div>
     </section>
 
 
