--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <h2>Tea of the Month</h2>
         <h4>What's Steeping at The Tea Cozy?</h4>
       </div>
-      <section class="container">
+      <section class="container tea">
         <div class="item">
           <img
             src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-berryblitz.jpg"
@@ -82,26 +82,32 @@
             Suite 108 <br>
             Portland, Maine
          </p>
-       </div>
-       <div class="location">
-         <h3>East Bayside</h3>
-           <p>
-             3433 Phisherman's Avenue <br>
-             (Northwest Corner) <br>
-             Portland, Maine
+        </div>
+        <div class="location">
+          <h3>East Bayside</h3>
+            <p>
+              3433 Phisherman's Avenue <br>
+              (Northwest Corner) <br>
+              Portland, Maine
            </p>
-       </div>
-       <div class="location">
-         <h3>Oakdale</h3>
-         <p>
-           515 Crescent Avenue <br>
-           Second Floor <br>
-           Portland, Maine
-         </p>
-       </div>
+        </div>
+        <div class="location">
+          <h3>Oakdale</h3>
+          <p>
+            515 Crescent Avenue <br>
+            Second Floor <br>
+            Portland, Maine
+          </p>
+        </div>
+      </section>
     </section>
-
-
-
+    <section class="contacts">
+        <h2>The Tea Cozy</h2>
+        <h5>contact@theteacozy.com</h5>
+        <h5>917-555-8904</h5>
+    </section>
+    <footer>
+      &copy; The Tea Cozy 2017
+    </footer>
   </body>
 </html>
