--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link
       rel="stylesheet"
-      href="/Users/dariaaverina/Documents/GitHub/TeaCozy/resources/style.css"
+      href="TeaCozy/resources/style.css"
       type="text/css">
     <title>Tea Cozy</title>
   </head>
