--- a/index.html
+++ b/index.html
@@ -2,19 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link
-      rel="stylesheet"
-      href="resources/style.css"
-      type="text/css">
+    <link href="resources/style.css" rel="stylesheet" type="text/css">
     <title>Tea Cozy</title>
   </head>
   <body>
 
     <header class="main-header">
-      <img
-        class="logo"
-        src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-tea-cozy-logo.png"
-        alt="Tea Cozy logo">
+      <img class="logo" src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-tea-cozy-logo.png" alt="Tea Cozy logo">
       <ul class="main-nav">
         <li><a href="#mission">Mission</a></li>
         <li><a href="#featured-tea">Featured Tea</a></li>
@@ -40,33 +34,23 @@
       </div>
       <section class="container tea">
         <div class="item">
-          <img
-            src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-berryblitz.jpg"
-            alt="Fall Berry Blitz Tea photo">
+          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-berryblitz.jpg" alt="Fall Berry Blitz Tea photo">
             <span>Fall Berry Blitz Tea</span>
         </div>
         <div class="item">
-          <img
-            src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-spiced-rum.jpg"
-            alt="Spiced Rum Tea photo">
+          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-spiced-rum.jpg" alt="Spiced Rum Tea photo">
             <span>Spiced Rum Tea</span>
         </div>
         <div class="item">
-          <img
-            src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-donut.jpg"
-            alt="donut photo">
+          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-donut.jpg" alt="donut photo">
             <span>Seasonal Donuts</span>
         </div>
         <div class="item">
-          <img
-            src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myrtle-ave.jpg"
-            alt="Myrtle Ave Tea photo">
+          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myrtle-ave.jpg" alt="Myrtle Ave Tea photo">
             <span>Myrtle Ave Tea</span>
         </div>
         <div class="item">
-          <img
-            src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-bedford-bizarre.jpg"
-            alt="Bedford Bizarre Tea photo">
+          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-bedford-bizarre.jpg" alt="Bedford Bizarre Tea photo">
             <span>Bedford Bizarre Tea</span>
         </div>
      </section>
