--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
      </section>
     </section>
 
-    <section id="locations">
+    <section id="locations" class="location">
       <h2>Locations</h2>
       <section class="container">
         <div class="location">
